--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,17 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_test = [i for i in range(1,10)]\n",
-    "Y_test = [(model.intercept_+1.2*i) for i in X_test]"
+    "Y_test = [(model.intercept_+1.2*x) for x in X_test]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
